2001-09-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* doc/tclsh.1:
	* doc/Tcl_Main.3: 
	* doc/CrtChannel.3: 
	* doc/OpenFileChnl.3: 
	* doc/GetStdChan.3: Enhanced the manpages with cross-references to
	  the new manpage and more explanations how these functions deal
	  with the standard channels in various situations.

	* doc/StdChannels.3: New manpage describing handling of the
	  standard channels by the Tcl library [402725].

2001-09-10  Don Porter <dgp@users.sourceforge.net>

	* unix/tclLoadShl.c:  Added #include of tclInt.h; access to Tcl
	internals, notably TclpUnloadFile(), is required.  Thanks to
	Bob Techentin for report and patch.  [Bug 459305]

	* generic/tclInitScript.h (initScript):
	* win/tclWinInit.c (TCL_REGISTRY_KEY, TclpSetVariables):  Removed
	vestiges of Tcl's old initialization from registry variables.
	[Bug 455645]

2001-09-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* generic/tclInt.decls: Also added 'TclWinFlushDirtyChannels' to
	  the internal platform specific stub table.

	* win/tclWinFile.c (TclpObjStat): Now added the call to
	  'TclWinFlushDirtyChannels' to this function. I don't know where
	  my head was last thursday (2001-09-06), but the call was
	  actually added to 'TclpObjChdir', i.e. the implementation of
	  [cd]. Corrected this now. Thanks to Vince Darley for spotting
	  this.

2001-09-10  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclProc.c:
	* tests/proc.test: made [proc] bytecompile a no-op for procs
	defined with _args_ as single argument and an empty body.
	[FQ 451441] 
	
2001-09-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in:
	* win/Makefile.in: Use () around variable name
	instead of {}. Use TCLTEST variable directly
	instead of depending on the tcltest alias.

2001-09-09  David Gravereaux <davygrvy@pobox.com>

	* generic/tcl.h:
	* generic/tclPlatDecls.h:  Reminder from David Cuthbert <dacut@kanga.org>